Add model summary

--- a/Code/inference-MedMNIST.ipynb
+++ b/Code/inference-MedMNIST.ipynb
@@ -346,14 +346,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision.models as models\n",
     "import torch.optim as optim\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "# torch summary\n",
+    "import torchsummary"
    ]
   },
   {
