Add model summary

--- a/Code/inference-MedMNIST.ipynb
+++ b/Code/inference-MedMNIST.ipynb
@@ -14,6 +14,7 @@
     "import os\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
+    "import torchsummary\n",
     "\n",
     "from torchvision.datasets import CIFAR100, CIFAR10\n",
     "from tqdm import tqdm_notebook as tqdm\n",
@@ -54,12 +55,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "srmodel = torch.load('model/model_srresnet.pth')[\"model\"]\n",
-    "# srmodel = srmodel.cuda()"
+    "srmodel = srmodel.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 64, 28, 28]          15,552\n",
+      "         LeakyReLU-2           [-1, 64, 28, 28]               0\n",
+      "            Conv2d-3           [-1, 64, 28, 28]          36,864\n",
+      "    InstanceNorm2d-4           [-1, 64, 28, 28]             128\n",
+      "         LeakyReLU-5           [-1, 64, 28, 28]               0\n",
+      "            Conv2d-6           [-1, 64, 28, 28]          36,864\n",
+      "    InstanceNorm2d-7           [-1, 64, 28, 28]             128\n",
+      "   _Residual_Block-8           [-1, 64, 28, 28]               0\n",
+      "            Conv2d-9           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-10           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-11           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-12           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-13           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-14           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-15           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-16           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-17           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-18           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-19           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-20           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-21           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-22           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-23           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-24           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-25           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-26           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-27           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-28           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-29           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-30           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-31           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-32           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-33           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-34           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-35           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-36           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-37           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-38           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-39           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-40           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-41           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-42           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-43           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-44           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-45           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-46           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-47           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-48           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-49           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-50           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-51           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-52           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-53           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-54           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-55           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-56           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-57           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-58           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-59           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-60           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-61           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-62           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-63           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-64           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-65           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-66           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-67           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-68           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-69           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-70           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-71           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-72           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-73           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-74           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-75           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-76           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-77           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-78           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-79           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-80           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-81           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-82           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-83           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-84           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-85           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-86           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-87           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-88           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-89           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-90           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-91           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-92           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-93           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-94           [-1, 64, 28, 28]             128\n",
+      "        LeakyReLU-95           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-96           [-1, 64, 28, 28]          36,864\n",
+      "   InstanceNorm2d-97           [-1, 64, 28, 28]             128\n",
+      "  _Residual_Block-98           [-1, 64, 28, 28]               0\n",
+      "           Conv2d-99           [-1, 64, 28, 28]          36,864\n",
+      "  InstanceNorm2d-100           [-1, 64, 28, 28]             128\n",
+      "          Conv2d-101          [-1, 256, 28, 28]         147,456\n",
+      "    PixelShuffle-102           [-1, 64, 56, 56]               0\n",
+      "       LeakyReLU-103           [-1, 64, 56, 56]               0\n",
+      "          Conv2d-104          [-1, 256, 56, 56]         147,456\n",
+      "    PixelShuffle-105         [-1, 64, 112, 112]               0\n",
+      "       LeakyReLU-106         [-1, 64, 112, 112]               0\n",
+      "          Conv2d-107          [-1, 3, 112, 112]          15,552\n",
+      "================================================================\n",
+      "Total params: 1,546,752\n",
+      "Trainable params: 1,546,752\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 61.54\n",
+      "Params size (MB): 5.90\n",
+      "Estimated Total Size (MB): 67.45\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "torchsummary.summary(srmodel, (3, 28, 28))"
    ]
   },
   {
