--- a/Preliminary-Project-Report/egbib.bib
+++ b/Preliminary-Project-Report/egbib.bib
@@ -158,6 +158,16 @@
   publisher={IOP Publishing}
 }
 
+@article{medmnistv2,
+    title={MedMNIST v2-A large-scale lightweight benchmark for 2D and 3D biomedical image classification},
+    author={Yang, Jiancheng and Shi, Rui and Wei, Donglai and Liu, Zequan and Zhao, Lin and Ke, Bilian and Pfister, Hanspeter and Ni, Bingbing},
+    journal={Scientific Data},
+    volume={10},
+    number={1},
+    pages={41},
+    year={2023},
+    publisher={Nature Publishing Group UK London}
+}
 
 
 
