--- a/Code/inference-MedMNIST.ipynb
+++ b/Code/inference-MedMNIST.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "649bb7c9de28428bbef67bfecd5fc0bc",
+       "model_id": "84589fb7dd78409ba0553b5f07a82403",
        "version_major": 2,
        "version_minor": 0
       },
@@ -298,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39de41d8b0ce4b03b1caa11c3fabc436",
+       "model_id": "d0e1a57c71d3469fb61ad4367f02014c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92bf3672f8294982b5fb463ec8b2878a",
+       "model_id": "ca73d64f1668428480bc3e0316cc60d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -648,13 +648,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e7697c99f5d4798a9382bccf194fde7",
+       "model_id": "4883f12186864108b9f1af3b652db5a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -668,7 +668,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4d9e1ed89414556af5561ebb984df0d",
+       "model_id": "a85a60d2c9754318abf92dffb0abdbfb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -682,7 +682,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "788d46c6e4d149a59317d0d60016c0f1",
+       "model_id": "cc55b5fc7b42429aa5afb2c0f652bc32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -696,7 +696,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d47a214700814422b4749faebd9fd67f",
+       "model_id": "576dd8ae3cb44411a9aea3e8975c2d98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -803,6 +803,37 @@
     "    plt.title(f'SR | Label: {labels[correct[i]]} | Predicted: {sr_preds[correct[i]]}')\n",
     "    plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5379\n",
+      "749\n",
+      "169\n",
+      "141\n",
+      "177\n",
+      "116\n",
+      "107\n",
+      "342\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum((lr_preds == labels) & (bc_preds == labels) & (sr_preds == labels)))\n",
+    "print(np.sum((lr_preds != labels) & (bc_preds == labels) & (sr_preds == labels)))\n",
+    "print(np.sum((lr_preds == labels) & (bc_preds != labels) & (sr_preds == labels)))\n",
+    "print(np.sum((lr_preds == labels) & (bc_preds == labels) & (sr_preds != labels)))\n",
+    "print(np.sum((lr_preds != labels) & (bc_preds != labels) & (sr_preds == labels)))\n",
+    "print(np.sum((lr_preds == labels) & (bc_preds != labels) & (sr_preds != labels)))\n",
+    "print(np.sum((lr_preds != labels) & (bc_preds == labels) & (sr_preds != labels)))\n",
+    "print(np.sum((lr_preds != labels) & (bc_preds != labels) & (sr_preds != labels)))"
    ]
   },
   {
